commit 011c868
Author: hutch <hutch@midwales.net>
Date:   Mon Dec 3 10:51:26 2012 +0000

    improved permissions handling for colorbox iframe

imagepicker.form-elements.inc
imagepicker.module

commit 2567bbe
Author: hutch <hutch@midwales.net>
Date:   Mon Nov 5 15:01:10 2012 +0000

    moved all theming functions into imagepicker.module

CHANGELOG.txt
imagepicker.module
imagepicker.theme.inc

commit 21a2cb3
Author: hutch <hutch@midwales.net>
Date:   Mon Oct 29 21:57:25 2012 +0000

    added theme to block, set theme.inc so it always loads

CHANGELOG.txt
imagepicker.css
imagepicker.module
imagepicker.theme.inc

commit 200825d
Author: hutch <hutch@midwales.net>
Date:   Sat Oct 27 17:12:21 2012 +0100

    fixed bug when public is not enabled

CHANGELOG.txt
imagepicker.group.inc

commit 6611f15
Author: hutch <hutch@midwales.net>
Date:   Sat May 19 12:39:18 2012 +0100

    fixed form_error, added javascript paths

CHANGELOG.txt
imagepicker.admin.inc
imagepicker.functions.inc
imagepicker.group.inc
imagepicker.upload.inc
imagepicker.user.inc

commit b0dd731
Author: hutch <hutch@midwales.net>
Date:   Thu May 3 09:59:36 2012 +0100

    removed attempted fix for disappearing imagepicker

CHANGELOG.txt
imagepicker.functions.inc

commit f08627d
Author: hutch <hutch@midwales.net>
Date:   Thu May 3 01:33:06 2012 +0100

    put include to theme file in imagepicker box.

CHANGELOG.txt
imagepicker.functions.inc

commit 0e20931
Author: hutch <hutch@midwales.net>
Date:   Fri Apr 27 10:10:11 2012 +0100

    fixed scale limits, see #1550068

CHANGELOG.txt
imagepicker.admin.inc
imagepicker.functions.inc
imagepicker.import.inc
imagepicker.upload.inc
imagepicker.user.inc

commit 1ba05e9
Author: hutch <hutch@midwales.net>
Date:   Tue Apr 10 21:47:44 2012 +0100

    improved Wysiwyg API support

CHANGELOG.txt
imagepicker_iframe.js

commit 9910805
Author: hutch <hutch@midwales.net>
Date:   Sat Mar 10 17:55:15 2012 +0000

    added views to imagepicker

CHANGELOG.txt