@@ -1090,7 +1090,7 @@ function imagepicker_get_image_path($img, $type = 'browser', $public = FALSE, $p
     if ($suffix) {
       if (imagepicker_variable_get('imagepicker_use_full_url', 0) || variable_get('file_default_scheme', 'public') == 'private') {
         if (module_exists('image') && imagepicker_variable_get('imagepicker_image_enable', 0) && $preset && $suffix == IMAGEPICKER_THUMBS_DIR) {
-          $imgpath = image_style_url('__PRESET__', IMAGEPICKER_FILE_SCHEME . IMAGEPICKER_FILES_DIR . '/' . imagepicker_get_userpath($userdir) . $suffix . '/' . $img_name);
+          $imgpath = image_style_url($preset, IMAGEPICKER_FILE_SCHEME . IMAGEPICKER_FILES_DIR . '/' . imagepicker_get_userpath($userdir) . $suffix . '/' . $img_name);
         }
         else {
           $imgpath = file_create_url(IMAGEPICKER_FILE_SCHEME . IMAGEPICKER_FILES_DIR . '/' . imagepicker_get_userpath($userdir) . $suffix . '/' . $img_name);
@@ -1098,7 +1098,7 @@ function imagepicker_get_image_path($img, $type = 'browser', $public = FALSE, $p
       }
       else {
         if (module_exists('image') && imagepicker_variable_get('imagepicker_image_enable', 0) && $preset && $suffix == IMAGEPICKER_THUMBS_DIR) {
-          $imgpath = image_style_url('__PRESET__', IMAGEPICKER_FILE_SCHEME . IMAGEPICKER_FILES_DIR . '/' . imagepicker_get_userpath($userdir) . $suffix . '/' . $img_name);
+          $imgpath = image_style_url($preset, IMAGEPICKER_FILE_SCHEME . IMAGEPICKER_FILES_DIR . '/' . imagepicker_get_userpath($userdir) . $suffix . '/' . $img_name);
         }
         else {
           $imgpath = imagepicker_get_path(TRUE, $userdir) . $suffix . '/' . $img_name;
@@ -1108,7 +1108,7 @@ function imagepicker_get_image_path($img, $type = 'browser', $public = FALSE, $p
     else {
       if (imagepicker_variable_get('imagepicker_use_full_url', 0) || variable_get('file_default_scheme', 'public') == 'private') {
         if (module_exists('image') && imagepicker_variable_get('imagepicker_image_enable', 0) && $preset) {
-          $imgpath = image_style_url('__PRESET__', IMAGEPICKER_FILE_SCHEME . IMAGEPICKER_FILES_DIR . '/' . imagepicker_get_userpath($userdir) . $img_name);
+          $imgpath = image_style_url($preset, IMAGEPICKER_FILE_SCHEME . IMAGEPICKER_FILES_DIR . '/' . imagepicker_get_userpath($userdir) . $img_name);
         }
         else {
           $imgpath = file_create_url(IMAGEPICKER_FILE_SCHEME . IMAGEPICKER_FILES_DIR . '/' . imagepicker_get_userpath($userdir) . $img_name);
@@ -1116,7 +1116,7 @@ function imagepicker_get_image_path($img, $type = 'browser', $public = FALSE, $p
       }
       else {
         if (module_exists('image') && imagepicker_variable_get('imagepicker_image_enable', 0) && $preset) {
-          $imgpath = image_style_url('__PRESET__', IMAGEPICKER_FILE_SCHEME . IMAGEPICKER_FILES_DIR . '/' . imagepicker_get_userpath($userdir) . $img_name);
+          $imgpath = image_style_url($preset, IMAGEPICKER_FILE_SCHEME . IMAGEPICKER_FILES_DIR . '/' . imagepicker_get_userpath($userdir) . $img_name);
         }
         else {
           $imgpath = imagepicker_get_path(TRUE, $userdir) . $img_name;
@@ -1403,8 +1403,15 @@ function theme_imagepicker_iframe($variables) {
     $presetfilelink = '';
     $presetthumblink = '';
     if (module_exists('image') && imagepicker_variable_get('imagepicker_image_enable', 0)) {
-      $presetfilelink = imagepicker_get_image_path($img, 'full', ($public ? array('name' => $img->name, 'uid' => $img->uid) : FALSE), TRUE);
-      $presetthumblink = imagepicker_get_image_path($img, 'thumb', ($public ? array('name' => $img->name, 'uid' => $img->uid) : FALSE), TRUE);
+      $preset_opts = image_style_options(FALSE);
+      $pfl = array();
+      $ptl = array();
+      foreach (array_keys($preset_opts) AS $preset_key) {
+        $pfl[$preset_key] = imagepicker_get_image_path($img, 'full', ($public ? array('name' => $img->name, 'uid' => $img->uid) : FALSE), $preset_key);
+        $ptl[$preset_key] = imagepicker_get_image_path($img, 'thumb', ($public ? array('name' => $img->name, 'uid' => $img->uid) : FALSE), $preset_key);
+      }
+      $presetfilelink = $pfl;
+      $presetthumblink = $ptl;
     }
 
     $info = image_get_info(imagepicker_get_path(FALSE, TRUE) . $img->img_name);
